client/css/main-xs.css
@media (max-width: 767px) {
    /* vendor
    ========================= */
    nav.navbar {
        margin: 0;
        position: static;
    }

    /* generic
    ========================= */
    .top-buffer {
        margin-top: 10px;
    }

    /* global
    ========================= */
    body {
        padding-top: 0;
    }
    #wrap {
        padding-bottom: 65px;
        margin-bottom: -60px;
    }

    /* account overview
    ========================= */
    .account__character {
        border-bottom-width: 0px;
        border-left-width: 5px;
        margin-bottom: 5px;
        padding-bottom: 0;
        padding-left: 10px;
    }

    /* inventory
    ========================= */
    .inventory__wrapper {
        overflow: hidden;
    }
    @keyframes expand_inventory {
        from { max-height: 0;     }
        to   { max-height: 350px; }
    }
    .inventory__wrapper.ng-enter {
        animation: expand_inventory 0.5s ease;
    }
    @keyframes collapse_inventory {
        from { max-height: 350px; }
        to   { max-height: 0;     }
    }
    .inventory__wrapper.ng-leave {
        animation: collapse_inventory 0.5s ease;
    }
    .inventory {
        margin-top: 20px;
    }
    .inventory .col-xs-pull-6 {
        padding-left: 0;
        padding-right: 5px;
    }
    .inventory .col-xs-push-6 {
        padding-left: 5px;
        padding-right: 0;
    }

    /* items
    ========================= */
    .item {
        margin-bottom: 5px;
    }
    .item__name {
        font-size: 80%;
    }
    .item__icon {
        height: 40px;
        width: 40px;
    }
    .item__stat {
        font-size: 80%;
        margin: 1px 0 1px 2px;
    }
    .item__stat__icon {
        margin-right: 0;
    }
    .item__stat__value abbr {
        border-bottom-width: 0;
    }

    /* stat profiles
    ========================= */
    .stat-profile__heading {
        padding-bottom: 5px;
        padding-top: 5px;
    }
    .stat-profile__body {
        padding: 5px 10px 10px;
    }
}

